--- a/_posts/2016-01-13-podcast.md
+++ b/_posts/2016-01-13-podcast.md
@@ -10,4 +10,4 @@ image:
   credit: 
 ---
 
-Blog is back! Trying this theme. Check Dave and I out on our podcast about Apple stuff. (Here)[http://www.onemorething.audio/episodes/episode11]
+Blog is back! Trying this theme. Check Dave and I out on our podcast about Apple stuff. [Here](http://www.onemorething.audio/episodes/episode11)
